--- a/index.html
+++ b/index.html
@@ -23,22 +23,43 @@
     </title>
   </head>
   <body>
-    <!-- Sign-up form start -->
-
-    Stay updated! Join 60,000+ product managers receiving monthly updates on:
-    Product discovery and building what matters Measuring to ensure updates are
-    a success And much more! Email address email@company.com Subscribe to
-    monthly newsletter
-
-    <!-- Sign-up form end -->
-
-    <!-- Success message start -->
-
-    Thanks for subscribing! A confirmation email has been sent to
-    ash@loremcompany.com. Please open it and click the button inside to confirm
-    your subscription. Dismiss message
-
-    <!-- Success message end -->
+    <main>
+      <article class="newsletter-sign-up">
+        <div class="newsletter__text-section">
+          <h1 class="newsletter-title">Stay updated!</h1>
+          <p class="newsletter-description">
+            Join 60,000+ product managers receiving monthly updates on:
+          </p>
+          <ul>
+            <li>Product discovery and building what matters</li>
+            <li>Measuring to ensure updates are a success</li>
+            <li>And much more!</li>
+          </ul>
+          <form action="#" method="post">
+            <label for="e-mail">Email address</label>
+            <input
+              type="email"
+              name="e-mail"
+              id="e-mail"
+              placeholder="email@company.com"
+            />
+            <button type="submit">Subscribe to monthly newsletter</button>
+          </form>
+        </div>
+        <div class="newsletter__img-section">
+          <img src="./assets/images/illustration-sign-up-mobile.svg" alt="" />
+        </div>
+        <div class="success-message hide">
+          <h2>Thanks for subscribing!</h2>
+          <p>
+            A confirmation email has been sent to
+            <span class="bold">ash@loremcompany.com</span>. Please open it and
+            click the button inside to confirm your subscription.
+          </p>
+          <button type="button">Dismiss message</button>
+        </div>
+      </article>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
