--- a/index.html
+++ b/index.html
@@ -35,15 +35,18 @@
             <li>Measuring to ensure updates are a success</li>
             <li>And much more!</li>
           </ul>
-          <form action="#" method="post">
-            <label for="e-mail">Email address</label>
+          <form action="#" novalidate>
+            <label for="e-mail" class="email-label">Email address</label>
             <input
               type="email"
               name="e-mail"
               id="e-mail"
               placeholder="email@company.com"
+              class="email-input"
             />
-            <button type="submit">Subscribe to monthly newsletter</button>
+            <button class="submit-btn" type="submit">
+              Subscribe to monthly newsletter
+            </button>
           </form>
         </div>
         <div class="newsletter__img-section">
