Incorporate the mobile success modal

--- a/index.html
+++ b/index.html
@@ -53,13 +53,20 @@
           <img src="./assets/images/illustration-sign-up-mobile.svg" alt="" />
         </div>
         <div class="success-message hide">
-          <h2>Thanks for subscribing!</h2>
-          <p>
-            A confirmation email has been sent to
-            <span class="bold">ash@loremcompany.com</span>. Please open it and
-            click the button inside to confirm your subscription.
-          </p>
-          <button type="button">Dismiss message</button>
+          <div class="flex-container">
+            <img
+              src="./assets/images/icon-success.svg"
+              alt=""
+              class="icon-success"
+            />
+            <h2>Thanks for subscribing!</h2>
+            <p>
+              A confirmation email has been sent to
+              <span class="bold">ash@loremcompany.com</span>. Please open it and
+              click the button inside to confirm your subscription.
+            </p>
+            <button type="button">Dismiss message</button>
+          </div>
         </div>
       </article>
     </main>
